frontend_tests/negative/return_count/go.mod
module example.com/renvotests/negative/returncount

go 1.25
